2008-04-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_add_script):
	fixed compilation on Win32 (bug #527300).

2008-04-10  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.[ch] (gimp_statusbar_progress_message):
	improved the check if the message can be shown in the statusbar.
	Do not show messages that don't fit into the given space.

	* app/gui/gui-message.c (gui_message_error_dialog): if there's
	already an error dialog associated with a progress, then use it.

2008-04-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcomponenteditor.c: implement
	GimpDocked::set_context() and set the GimpViewRenderers'
	contexts. Unclear how this could have been missed since it
	warned badly about NULL contexts.

2008-04-10  Michael Natterer  <mitch@gimp.org>

	* plug-ins/pygimp/plug-ins/python-console.py
	* plug-ins/script-fu/scripts/ts-helloworld.scm: fix new menu paths.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* data/images/gimp-splash.png: flattened splash image.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.5.1.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* Made 2.5.0 development release.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* app/config/Makefile.am: fixed build of test-config.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/ts-helloworld.scm
	* plug-ins/script-fu/scripts/test-sphere.scm
	* plug-ins/script-fu/scripts/contactsheet.scm: register in new
	menu locations.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/border-average.c: corrected parameter description.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/benchmark-foreground-extract.py
	* plug-ins/pygimp/plug-ins/python-console.py
	* plug-ins/pygimp/plug-ins/sphere.py: register in new menu locations.

2008-04-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/twain/twain.c: register in new menu location.

2008-04-09  Sven Neumann  <sven@gimp.org>
